LinKreta_POC_Repository/force-app/main/default/objects/OfficeManagingPartner__mdt/OfficeManagingPartner__mdt.object-meta.xml
<CustomObject>
    <description>Office Managing Partner</description>
    <label>Office Managing Partner</label>
    <pluralLabel>Office Managing Partners</pluralLabel>
</CustomObject>