LinKreta_POC_Repository/force-app/main/default/objects/OfficeManagingPartner__mdt/fields/EMP_ID__c.field-meta.xml
<CustomField>
    <fullName>EMP_ID__c</fullName>
    <label>EMP ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>