LinKreta_POC_Repository/force-app/main/default/objects/OfficeManagingPartner__mdt/fields/Loc_Name__c.field-meta.xml
<CustomField>
    <fullName>Loc_Name__c</fullName>
    <label>Loc Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>