LinKreta_POC_Repository/force-app/main/default/objects/OfficeManagingPartner__mdt/fields/OMP_Name__c.field-meta.xml
<CustomField>
    <fullName>OMP_Name__c</fullName>
    <label>OMP Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>